<resources>
    <string name="app_name">律师12348</string>
    <string name="login">登陆</string>
    <string name="zhiyezhenghao">职业证号</string>
    <string name="loginpassword">登陆密码</string>
    <string name="name">姓\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020名</string>
    <string name="unbind">解除绑定</string>
    <string name="password_hint">请输入登陆密码</string>
    <string name="name_hint">请输入姓名</string>
    <string name="zhenghao_hint">请输入执业证号</string>
    <string name="tocalmoney">总金额</string>
    <string name="number">0</string>
    <string name="lawfirm">山东达成律师事务所</string>
    <string name="user_name">张子唐</string>
    <string name="finance">财务</string>
    <string name="case2">案件</string>
    <string name="resole">批办</string>
    <string name="counselor">顾问</string>
    <string name="notice">本所公告</string>
    <string name="newlaw">新法速递</string>
    <string name="netizenconsult">网民咨询</string>
    <string name="netizenentrust">网民委托</string>
    <string name="entrustindent">委托订单</string>
    <string name="lawproduct">法律服务产品</string>
    <string name="lawcall">法律服务招投标</string>
    <string name="wait">待办</string>
    <string name="work">工作</string>
    <string name="plateform">平台</string>
    <string name="communtity">社区</string>
    <string name="normaoevent">常用事项</string>
    <string name="accountmanager">到账管理</string>
    <string name="case3">诉讼案件</string>
    <string name="othercase">非诉讼案件</string>
    <string name="mycontrol">我要批办</string>
    <string name="localfile">本所文件库</string>
    <string name="otherevent">其他事项</string>
    <string name="lawindent">法律服务订单</string>
    <string name="lawplateform">律师服务平台</string>
    <string name="caseplan">案件进度</string>
    <string name="netsession">网上开庭</string>
    <string name="netrecord">网上立案</string>
    <string name="relevance">关联案件查询</string>
    <string name="library">行业智库</string>
    <string name="contractmode">合同范本</string>
    <string name="book">文书</string>
    <string name="my">我的</string>
    <string name="cancel">注销</string>
    <string name="myfavorite">我的收藏</string>
    <string name="changepassword">修改密码</string>
    <string name="oldpassword">请填写原密码</string>
    <string name="getcode">获取验证码</string>
    <string name="newpasswordhint">请填写新密码,6-16字符,非纯数字</string>
    <string name="newpasswordhint2">请再次输入新密码</string>
    <string name="verifycode">请填写短信验证码</string>
    <string name="complete">完成</string>
    <string name="opinionfeedback">意见反馈</string>
    <string name="qqmail">QQ/邮箱</string>
    <string name="contactway">请输入您 的联系方式</string>
    <string name="feedbackissue">请输入你要反馈的问题/建议</string>
    <string name="feedbacktitle">反馈信息</string>
    <string name="submitfeedback">提交反馈</string>
    <string name="feedbackcontent">反馈详细内容</string>
    <string name="share">分享到</string>
    <string name="weixinfriend">微信好友</string>
    <string name="search">搜索</string>
    <string name="inputcontent">请输入搜索内容</string>
    <string name="weidaozhang">未到账</string>
    <string name="ketixian">可提现</string>
    <string name="ketiyajin">可提押金</string>
    <string name="nocontent">没有找到任何信息</string>
    <string name="casenum">案件编号</string>
    <string name="inputcasenum">输入案件编号</string>
    <string name="casepassword">案件密码</string>
    <string name="inputcasepassword">输入案件密码</string>
    <string name="courthouse">法院</string>
    <string name="select">请选择</string>
    <string name="search1">查询</string>
    <string name="clean">清空</string>
    <string name="shenggaoyuan">省高院</string>
    <string name="weihaizhongyuan">威海中院</string>
    <string name="cancel1">取消</string>
    <string name="pleasesel">请选择法院</string>
    <string name="zhuanzaizimeiti">转载自媒体</string>
    <string name="title">标\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020题</string>
    <string name="pleaseinputtitle">请填写标题</string>
    <string name="label">标\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020签</string>
    <string name="jianjie">简\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020介</string>
    <string name="html">链接地址</string>
    <string name="htmlhint">请填写转载的链接地址</string>
    <string name="jianjiehint">请填写简介</string>
    <string name="labelhint">请填写标签,多个标签用空格分开</string>
    <string name="fabu">发布</string>
    <string name="yuanchuang">原创</string>
    <string name="zhuanzai">转载</string>
    <string name="fenxiangqu">分享区</string>
    <string name="xiezhuqu">协助区</string>
    <string name="jiaoliuqu">交流区</string>
    <string name="zimeiti">自媒体</string>
    <string name="zixunqu">咨询区</string>
    <string name="pleaseinputsearch">请输入搜索内容,进行搜索</string>
    <string name="close">关闭</string>
    <string name="huadaodingbu">滑到顶部</string>
    <string name="biaodijine">标的金额(元)</string>
    <string name="qingshurubiaodie_hint">请输入案件标的金额</string>
    <string name="casetype">案件种类</string>
    <string name="casetype_hint">请选择案件种类</string>
    <string name="casetleixing">案件类型</string>
    <string name="caseleixing_hint">请选择案件类型</string>
    <string name="calculate">计算</string>
    <string name="calculateresult">计算结果</string>
    <string name="shouqufeiyong">法院收取费用(元)</string>
    <string name="calculateresultonlyreference">计算结果仅供参考</string>
    <string name="lawservice">12348法律服务网</string>
    <string name="lawkit">法律工具箱</string>
    <string name="areatype">地区选择</string>
    <string name="areatype_hint">请选择地区</string>
    <string name="lawcost">律师费(元)</string>
    <string name="calculateresultonly">该计算器仅适用于涉及财产的民事案件</string>
    <string name="debtmoney">欠款金额(元)</string>
    <string name="debtmoney_hint">请输入欠款金额</string>
    <string name="debtmoneystart">欠款起始日期</string>
    <string name="selecttime">请选择时间</string>
    <string name="debtmoneyend">欠款截止日期</string>
    <string name="levelrate">利率档次</string>
    <string name="multiple">倍数</string>
    <string name="one">一倍</string>
    <string name="two">两倍</string>
    <string name="three">三倍</string>
    <string name="four">四倍</string>
    <string name="zidingyi">自定义</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="btn_scroll_view">ScrollView demo</string>
    <string name="btn_list_view">ListView demo</string>
    <string name="header_hint_refresh_normal">正在刷新数据</string>
    <string name="header_hint_refresh_ready">正在刷新数据</string>
    <string name="header_hint_refresh_loading">正在刷新数据</string>
    <string name="header_hint_refresh_time">Time：</string>
    <string name="footer_hint_load_normal">加载完成</string>
    <string name="footer_hint_load_ready">正在加载下一页</string>
    <string name="promulgator">发 布 者</string>
    <string name="publishtime">发布时间</string>
    <string name="searchtype">搜索分类</string>
    <string name="hehuorenhuiyi">合伙人会议</string>
    <string name="anjiantaolunhuiyi">案件讨论会议</string>
    <string name="zhuanxiangyewuhuiyi">专项业务会议</string>
    <string name="other">其他</string>
    <string name="searchresult">搜索结果</string>
    <string name="submitsave">提交保存</string>
    <string name="baseinfo">基本信息</string>
    <string name="casetime">接案时间</string>
    <string name="reason">案\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020由</string>
    <string name="casetype1">案件类型</string>
    <string name="jieruchengxu">介入程序</string>
    <string name="guwendanwei">顾问单位</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="shifouqianyue">是否签约</string>
    <string name="dangshirendiwei">当事人诉讼地位</string>
    <string name="anjianbiaodie">案件标的额</string>
    <string name="bitianxiang">必填项</string>
    <string name="yuan">元</string>
    <string name="layer1">承办律师一</string>
    <string name="layer2">承办律师二</string>
    <string name="anyuanlayer">案源律师</string>
    <string name="canyulayer">参与律师</string>
    <string name="shoulifayuan">受理法院</string>
    <string name="dangshirenxinxi">当事人信息</string>
    <string name="mingchengdanwei">名称/单位</string>
    <string name="phone">电\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020话</string>
    <string name="zhengjianhao">证\u0020\u0020\u0020件\u0020\u0020号</string>
    <string name="adress">地\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020址</string>
    <string name="duifangdangshirenxinxi">对方当事人信息</string>
    <string name="jianyaoanqing">简要案情</string>
    <string name="beizhu">备\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020注</string>
    <string name="zixunxiangqing">咨询详情</string>
    <string name="xiepinglun">写评论...</string>
    <string name="pinglunneirong">评论内容</string>
    <string name="pinglun">评论</string>
    <string name="jiaoliuxiangqing">交流详情</string>
    <string name="zimeitixiangqing">自媒体详情</string>
    <string name="gongdanbiaoti">工单标题</string>
    <string name="gondangenlei">工单分类</string>
    <string name="fabushijian">发布时间</string>
    <string name="fenlei">分\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020类</string>
    <string name="zhuangtai">状\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020态</string>
    <string name="faqishijian">发起时间</string>
    <string name="chulishijian">处理时间</string>
    <string name="wanchengshijian">完成时间</string>
    <string name="guwengongdanxiangqing">顾问工单详情</string>
    <string name="xiehuifu">写回复...</string>
    <string name="dangshiren">当\u0020\u0020事\u0020\u0020人</string>
    <string name="jieanshijian">接案时间</string>
    <string name="xiangmuleixing">项目类型</string>
    <string name="weituodanwei">委托单位</string>
    <string name="tijiaoshijian">提交时间</string>
    <string name="chengbanlvshi">承办律师</string>
    <string name="pibanshijian">批办时间</string>
    <string name="susonganjianpiban">诉讼案件批办</string>
    <string name="anyou">案\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020由</string>
    <string name="anhao">案\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020号</string>
    <string name="shenji">审\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020级</string>
    <string name="biaodie">标的额(元)</string>
    <string name="dianhua">电\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020话</string>
    <string name="mingcheng">名\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020称</string>
    <string name="feisusonganjianpiban">非诉讼案件批办</string>
    <string name="xiangmumingcheng">项目名称</string>
    <string name="yewushenpibumen">业务审批部门</string>
    <string name="yewugaishu">业务概述</string>
    <string name="nishoufeishue">拟收费数额(元)</string>
    <string name="danweimingcheng">单位名称</string>
    <string name="lianxiren">联\u0020\u0020系\u0020\u0020人</string>
    <string name="qianyuedaoqi">签约到期</string>
    <string name="shifouguidang">是否归档</string>
    <string name="shoujihaoma">手机号码</string>
    <string name="guhua">固\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020话</string>
    <string name="qq">Q\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020Q</string>
    <string name="caozuo">操作</string>
    <string name="bodadainhua">拨打电话</string>
    <string name="qqlianxi">QQ联系</string>
    <string name="bodaguhua">拨打固话</string>
    <string name="cansel">取消</string>
    <string name="fenpeizonge">分配总额</string>
    <string name="yikaifapiaozonge">已经开发票总额:</string>
    <string name="zanweifapiaozonge">暂未发票总额:</string>
    <string name="yidaozhangzonge">已到账总额:</string>
    <string name="weidaozhangzonge">未到账总额:</string>
    <string name="yitiquzonge">已提取总额:</string>
    <string name="ketiquzonge">可提取总额:</string>
    <string name="zhengzaitiquzonge">正在提取总额:</string>
    <string name="yitiquyajinzonge">已提取押金总额:</string>
    <string name="ketiquyajinzonge">可提取押金总额:</string>
    <string name="buketiquyajinzonge">不可提取押金总额:</string>
    <string name="zhengzaitiquyajinzonge">正在提取押金总额:</string>
    <string name="heji">合\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020计</string>
    <string name="tixianxinxi">提现信息</string>
    <string name="tixianxiangqing">提现详情</string>
    <string name="fenpeizongeyuan">分配总额(元)</string>
    <string name="shuifeizongeyuan">税费总额(元)</string>
    <string name="yajinzongeyuan">押金总额(元)</string>
    <string name="liusuojineyuan">留所金额(元)</string>
    <string name="oa12348">OA12348</string>
</resources>