<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/caozuo"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/bodadainhua"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:textColor="@color/huise3"
        android:layout_marginTop="20dp"

        android:id="@+id/textview_dialogcaozuo1"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/qqlianxi"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:textColor="@color/huise3"
        android:layout_marginTop="20dp"
        android:id="@+id/textview_dialogcaozuo2"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/bodaguhua"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:textColor="@color/huise3"
        android:layout_marginTop="20dp"
        android:id="@+id/textview_dialogcaozuo3"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:gravity="end"
        android:text="@string/cansel"
        android:layout_marginLeft="20dp"
        android:textColor="@color/blue3"
        android:layout_marginTop="20dp"
        android:layout_marginRight="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="30dp"
        android:id="@+id/textview_dialogcaozuo4"
        android:layout_marginBottom="20dp"
        />



</LinearLayout>