<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/mytextcolorblack"
            android:text="@string/casenum"
            android:textSize="16sp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:id="@+id/textview_fragcaseplan1"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/inputcasenum"
            android:textSize="16sp"
            android:paddingLeft="5dp"
            android:paddingStart="5dp"
            android:paddingRight="0dp"
            android:paddingEnd="0dp"
            android:layout_marginRight="20dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:layout_marginLeft="20dp"
            android:background="@drawable/xshape_etbac_normal"
            android:gravity="center_vertical"
            android:id="@+id/edittext_fragcaseplan1"

            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/mytextcolorblack"
            android:text="@string/casepassword"
            android:textSize="16sp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:id="@+id/textview_fragcaseplan2"
            />

        <EditText
            android:id="@+id/edittext_fragcaseplan2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/xshape_etbac_normal"
            android:gravity="center_vertical"
            android:hint="@string/inputcasepassword"
            android:paddingBottom="10dp"
            android:paddingLeft="5dp"
            android:paddingStart="5dp"
            android:paddingRight="0dp"
            android:paddingEnd="0dp"
            android:paddingTop="10dp"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/courthouse"
            android:textSize="16sp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:textColor="@color/mytextcolorblack"
            android:gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:id="@+id/textview_fragcaseplan3"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select"
            android:textSize="16sp"
            android:background="@drawable/xshape_etbac_normal"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:textColor="@color/mytextcolorgray"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:id="@+id/textview_fragcaseplan4"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search1"
            android:textSize="16sp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:background="@color/myback3"
            android:textColor="@color/mytextcolorwhite"
            android:gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:id="@+id/textview_fragcaseplan5"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/clean"
            android:textSize="14sp"
            android:textStyle="bold"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:textColor="@color/mytextcolorgray"
            android:gravity="end"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:id="@+id/textview_fragcaseplan6"

            />


    </LinearLayout>

</LinearLayout>