<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <dingw.com.newversion.customview.TopBar
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/topbar_changepasswordact"
        custom:centerText="@string/changepassword"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        >


        <EditText
            android:id="@+id/edittext_changepassword_oldpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/xvector_unlock"
            android:drawableStart="@drawable/xvector_unlock"
            android:drawablePadding="10dp"
            android:hint="@string/oldpassword"
            android:maxLines="1"
            android:inputType="textPassword"
            android:textSize="16sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="10dp"
            android:maxLines="1"
            android:textSize="16sp"
            android:id="@+id/edittext_changepassword_newpassword1"
            android:hint="@string/newpasswordhint"
            android:drawableLeft="@drawable/xvector_lock"
            android:drawableStart="@drawable/xvector_lock"
            android:inputType="textPassword"
            />
        <EditText
            android:layout_width="match_parent"
            android:drawablePadding="10dp"
            android:maxLines="1"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:id="@+id/edittext_changepassword_newpassword2"
            android:hint="@string/newpasswordhint2"
            android:drawableLeft="@drawable/xvector_lock"
            android:drawableStart="@drawable/xvector_lock"
            android:inputType="textPassword"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_weight="1"
                android:maxLines="1"
                android:id="@+id/edittext_changepassword_verifycode"
                android:drawablePadding="10dp"
                android:hint="@string/verifycode"
                android:drawableLeft="@drawable/xvector_grayemail"
                android:drawableStart="@drawable/xvector_grayemail"
                />
            <dingw.com.newversion.customview.SuperTextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/getcode"
                custom:solid="@color/myyellow"
                android:textSize="16sp"
                android:maxLines="1"
                android:textColor="@color/mytextcolorwhite"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:id="@+id/textview_changepassword_getcode"
                custom:corner="5dp"

                />
        </LinearLayout>
        <dingw.com.newversion.customview.SuperTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/complete"
            custom:solid="@color/myyellow"
            android:textSize="20sp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:paddingTop="10dp"
            android:textColor="@color/mytextcolorwhite"
            android:paddingBottom="10dp"
            android:id="@+id/textview_changepassword_complete"
            custom:corner="5dp"
            />

    </LinearLayout>
</LinearLayout>
