<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <dingw.com.newversion.customview.TopBar
        android:layout_width="match_parent"
        android:layout_height="50dp"
        custom:centerText="@string/login"
        android:id="@+id/tb_loginact"
        >

    </dingw.com.newversion.customview.TopBar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:gravity="center"
        android:background="@color/mylodinback"
        android:orientation="vertical"
        >
        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:id="@+id/iv_headact"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:text="@string/oa12348"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content">

        <TextView
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/login_user"
            android:drawableStart="@drawable/login_user"
            android:gravity="center"
            android:text="@string/zhiyezhenghao"
            android:textStyle="bold"
            android:textSize="16sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_zhiyezhenghao"
            android:background="@drawable/xsel_etbac"
            android:hint="@string/zhenghao_hint"
            android:textSize="16sp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="5dp"
            android:paddingLeft="5dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="5dp"
            android:drawableRight="@drawable/xvector_close"
            android:drawableEnd="@drawable/xvector_close"
            android:paddingRight="5dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:text="@string/name"
            android:textStyle="bold"

            android:drawableLeft="@drawable/login_find"
            android:drawableStart="@drawable/login_find"
            android:textSize="16sp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_name"
            android:background="@drawable/xsel_etbac"
            android:hint="@string/name_hint"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="5dp"
            android:textSize="16sp"
            android:paddingRight="5dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="5dp"
            android:paddingLeft="5dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/loginpassword"
            android:textStyle="bold"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:drawableLeft="@drawable/login_find"
            android:drawableStart="@drawable/login_find"
            android:textSize="16sp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_loginpassword"
            android:background="@drawable/xsel_etbac"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="5dp"
            android:textSize="16sp"
            android:hint="@string/password_hint"
            android:paddingRight="5dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="5dp"
            android:inputType="textPassword"
            android:paddingLeft="5dp"/>
    </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:id="@+id/bt_login"
        android:textColor="@color/mytextcolorwhite"
        android:background="@drawable/xshape_rdbac_volit"
        android:text="@string/login"/>

    <TextView
        android:id="@+id/tv_unbind"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/unbind"
        android:textSize="14sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_temp"
        android:background="@color/beijingse"
        android:gravity="center"
        android:textSize="18sp"
        />

</LinearLayout>